--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,81 @@
 .App {
   text-align: center;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.card-container{
+  border: 1px solid;
+  margin: 1rem;
+  padding: 1rem;
+  border-radius: 5px;
+  box-shadow:5px 5px 0px 0px #289fed, 10px 10px 0px 0px #5fb8ff,
+  15px 15px 0px 0px #a1d8ff, 20px 20px 0px 0px #cae6ff,
+  25px 25px 0px 0px #e1eeff, 5px 5px 27px 5px rgba(255, 253, 181, 0); 
+  width: 500px;
+  background-image: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);
+}
+.header-container{
+  display: flex;
+  align-items: center;
+  margin-left: 1.5rem;
+}
+.header-container img{
+  border-radius: 50%;
 }
 
+.header {
+  font-size: 1.5em;
+  width: 60%;
+}
 
+.icon {
+  width: 35px;
+}
+
+.email-container{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.phone-container{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.location-container{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.email {
+  width: 50%;
+  font-size: 1.2rem;
+}
+.phone-number {
+  width: 50%;
+  font-size: 1.2rem;
+}
+.location{
+  width: 50%;
+  font-size: 1.2rem;
+}
+
+button {
+  border:none;
+  border-radius: 5px;
+  background-color: #289fed;
+  color:white;
+  padding: 1rem;
+  font-size: 1.3rem;
+  cursor:pointer;
+  margin: 25px;
+  transition: all 0,5s ease-in-out;
+}
+button:hover{
+  background-color: #ff9a9e;
+}
